@@ -13,6 +13,7 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 import javax.servlet.http.Cookie;
@@ -98,7 +99,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
     public void revertFilters() throws Exception {
         GeoServerSecurityManager secMgr = getSecurityManager();
         if (secMgr.listFilters().contains(testFilterName2)) {
-            SecurityFilterConfig config = secMgr.loadFilterConfig(testFilterName2);
+            SecurityFilterConfig config = secMgr.loadFilterConfig(testFilterName2, true);
             secMgr.removeFilter(config);
         }
     }
@@ -126,15 +127,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         getProxy().doFilter(request, response, chain);
         String tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Basic") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Basic"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -146,19 +143,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
 
         request.addHeader(
-                "Authorization",
-                "Basic "
-                        + new String(
-                                Base64.encodeBytes(
-                                        (testUserName + ":" + testPassword).getBytes())));
+                "Authorization", "Basic " + Base64.encodeBytes((testUserName + ":" + testPassword).getBytes()));
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         Authentication auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -183,22 +172,15 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        request.addHeader(
-                "Authorization",
-                "Basic "
-                        + new String(Base64.encodeBytes((testUserName + ":wrongpass").getBytes())));
+        request.addHeader("Authorization", "Basic " + Base64.encodeBytes((testUserName + ":wrongpass").getBytes()));
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Basic") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Basic"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -207,22 +189,16 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        request.addHeader(
-                "Authorization",
-                "Basic " + new String(Base64.encodeBytes(("unknwon:" + testPassword).getBytes())));
+        request.addHeader("Authorization", "Basic " + Base64.encodeBytes(("unknwon:" + testPassword).getBytes()));
         request.setMethod("GET");
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Basic") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Basic"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -233,28 +209,19 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
 
         // We need to enable Master Root login first
-        MasterPasswordProviderConfig masterPasswordConfig =
-                getSecurityManager()
-                        .loadMasterPassswordProviderConfig(
-                                getSecurityManager().getMasterPasswordConfig().getProviderName());
+        MasterPasswordProviderConfig masterPasswordConfig = getSecurityManager()
+                .loadMasterPassswordProviderConfig(
+                        getSecurityManager().getMasterPasswordConfig().getProviderName());
         masterPasswordConfig.setLoginEnabled(true);
         getSecurityManager().saveMasterPasswordProviderConfig(masterPasswordConfig);
 
         request.addHeader(
                 "Authorization",
-                "Basic "
-                        + new String(
-                                Base64.encodeBytes(
-                                        (GeoServerUser.ROOT_USERNAME + ":" + getMasterPassword())
-                                                .getBytes())));
+                "Basic " + Base64.encodeBytes((GeoServerUser.ROOT_USERNAME + ":" + getMasterPassword()).getBytes()));
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
@@ -271,22 +238,15 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
 
         request.addHeader(
                 "Authorization",
-                "Basic "
-                        + new String(
-                                Base64.encodeBytes(
-                                        (GeoServerUser.ROOT_USERNAME + ":geoserver1").getBytes())));
+                "Basic " + Base64.encodeBytes((GeoServerUser.ROOT_USERNAME + ":geoserver1").getBytes()));
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Basic") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Basic"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -299,23 +259,15 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
 
         request.addHeader(
-                "Authorization",
-                "Basic "
-                        + new String(
-                                Base64.encodeBytes(
-                                        (testUserName + ":" + testPassword).getBytes())));
+                "Authorization", "Basic " + Base64.encodeBytes((testUserName + ":" + testPassword).getBytes()));
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Basic") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Basic"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -336,8 +288,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
     @Test
     public void testCredentialsFromHeader() throws Exception {
 
-        CredentialsFromRequestHeaderFilterConfig config =
-                new CredentialsFromRequestHeaderFilterConfig();
+        CredentialsFromRequestHeaderFilterConfig config = new CredentialsFromRequestHeaderFilterConfig();
         config.setClassName(GeoServerCredentialsFromRequestHeaderFilter.class.getName());
         config.setUserNameHeaderName("X-Credentials");
         config.setPasswordHeaderName("X-Credentials");
@@ -358,12 +309,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
 
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -372,17 +319,12 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.setMethod("GET");
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
-        request.addHeader(
-                "X-Credentials", "private-user=" + testUserName + "&private-pw=" + testPassword);
+        request.addHeader("X-Credentials", "private-user=" + testUserName + "&private-pw=" + testPassword);
 
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         Authentication auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -398,16 +340,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        request.addHeader(
-                "X-Credentials", "private-user=" + testUserName + "&private-pw=wrongpass");
+        request.addHeader("X-Credentials", "private-user=" + testUserName + "&private-pw=wrongpass");
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -419,12 +356,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addHeader("X-Credentials", "private-user=wronguser&private-pw=" + testPassword);
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -433,18 +366,13 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.setMethod("GET");
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
-        String masterPassword = URLEncoder.encode(getMasterPassword(), "UTF-8");
+        String masterPassword = URLEncoder.encode(getMasterPassword(), StandardCharsets.UTF_8);
         request.addHeader(
-                "X-Credentials",
-                "private-user=" + GeoServerUser.ROOT_USERNAME + "&private-pw=" + masterPassword);
+                "X-Credentials", "private-user=" + GeoServerUser.ROOT_USERNAME + "&private-pw=" + masterPassword);
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
@@ -459,18 +387,12 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        request.addHeader(
-                "X-Credentials",
-                "private-user=" + GeoServerUser.ROOT_USERNAME + "&private-pw=geoserver1");
+        request.addHeader("X-Credentials", "private-user=" + GeoServerUser.ROOT_USERNAME + "&private-pw=geoserver1");
         getProxy().doFilter(request, response, chain);
 
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -481,18 +403,13 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.setMethod("GET");
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
-        request.addHeader(
-                "X-Credentials", "private-user=" + testUserName + "&private-pw=" + testPassword);
+        request.addHeader("X-Credentials", "private-user=" + testUserName + "&private-pw=" + testPassword);
 
         getProxy().doFilter(request, response, chain);
 
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -536,12 +453,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
 
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
         Authentication auth;
@@ -565,12 +478,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
             getProxy().doFilter(request, response, chain);
 
             assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-            ctx =
-                    (SecurityContext)
-                            request.getSession(true)
-                                    .getAttribute(
-                                            HttpSessionSecurityContextRepository
-                                                    .SPRING_SECURITY_CONTEXT_KEY);
+            ctx = (SecurityContext) request.getSession(true)
+                    .getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
             assertNotNull(ctx);
             auth = ctx.getAuthentication();
             assertNotNull(auth);
@@ -589,12 +498,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         getProxy().doFilter(request, response, chain);
 
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -617,12 +522,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         getProxy().doFilter(request, response, chain);
 
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -647,8 +548,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
     @Test
     public void testRequestHeaderProxy() throws Exception {
 
-        RequestHeaderAuthenticationFilterConfig config =
-                new RequestHeaderAuthenticationFilterConfig();
+        RequestHeaderAuthenticationFilterConfig config = new RequestHeaderAuthenticationFilterConfig();
         config.setClassName(GeoServerRequestHeaderAuthenticationFilter.class.getName());
         config.setName(testFilterName4);
         config.setRoleServiceName("rs1");
@@ -673,12 +573,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
 
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -695,12 +591,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
             }
             getProxy().doFilter(request, response, chain);
             assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-            ctx =
-                    (SecurityContext)
-                            request.getSession(true)
-                                    .getAttribute(
-                                            HttpSessionSecurityContextRepository
-                                                    .SPRING_SECURITY_CONTEXT_KEY);
+            ctx = (SecurityContext) request.getSession(true)
+                    .getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
             assertNotNull(ctx);
             Authentication auth = ctx.getAuthentication();
             assertNotNull(auth);
@@ -724,12 +616,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
             request.addHeader("principal", "unknwon");
             getProxy().doFilter(request, response, chain);
             assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-            ctx =
-                    (SecurityContext)
-                            request.getSession(true)
-                                    .getAttribute(
-                                            HttpSessionSecurityContextRepository
-                                                    .SPRING_SECURITY_CONTEXT_KEY);
+            ctx = (SecurityContext) request.getSession(true)
+                    .getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
             assertNotNull(ctx);
             Authentication auth = ctx.getAuthentication();
             assertNotNull(auth);
@@ -749,12 +637,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -796,14 +680,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
         String tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Digest") != -1);
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Digest"));
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -813,17 +693,12 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        String headerValue =
-                clientDigestString(tmp, testUserName, testPassword, request.getMethod());
+        String headerValue = clientDigestString(tmp, testUserName, testPassword, request.getMethod());
         request.addHeader("Authorization", headerValue);
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         Authentication auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -844,15 +719,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Digest") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Digest"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -867,15 +738,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Digest") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Digest"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -886,31 +753,23 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
 
         // We need to enable Master Root login first
-        MasterPasswordProviderConfig masterPasswordConfig =
-                getSecurityManager()
-                        .loadMasterPassswordProviderConfig(
-                                getSecurityManager().getMasterPasswordConfig().getProviderName());
+        MasterPasswordProviderConfig masterPasswordConfig = getSecurityManager()
+                .loadMasterPassswordProviderConfig(
+                        getSecurityManager().getMasterPasswordConfig().getProviderName());
         masterPasswordConfig.setLoginEnabled(true);
         getSecurityManager().saveMasterPasswordProviderConfig(masterPasswordConfig);
 
-        headerValue =
-                clientDigestString(
-                        tmp, GeoServerUser.ROOT_USERNAME, getMasterPassword(), request.getMethod());
+        headerValue = clientDigestString(tmp, GeoServerUser.ROOT_USERNAME, getMasterPassword(), request.getMethod());
         request.addHeader("Authorization", headerValue);
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
         // checkForAuthenticatedRole(auth);
-        assertEquals(
-                GeoServerUser.ROOT_USERNAME, ((UserDetails) auth.getPrincipal()).getUsername());
+        assertEquals(GeoServerUser.ROOT_USERNAME, ((UserDetails) auth.getPrincipal()).getUsername());
         assertEquals(1, auth.getAuthorities().size());
         assertTrue(auth.getAuthorities().contains(GeoServerRole.ADMIN_ROLE));
 
@@ -920,22 +779,16 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        headerValue =
-                clientDigestString(
-                        tmp, GeoServerUser.ROOT_USERNAME, "geoserver1", request.getMethod());
+        headerValue = clientDigestString(tmp, GeoServerUser.ROOT_USERNAME, "geoserver1", request.getMethod());
         request.addHeader("Authorization", headerValue);
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Digest") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Digest"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -951,15 +804,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         getProxy().doFilter(request, response, chain);
         tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Digest") != -1);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Digest"));
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
         updateUser("ug1", testUserName, true);
@@ -985,8 +834,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         config.setName(testFilterName5);
 
         getSecurityManager().saveFilter(config);
-        prepareFilterChain(
-                pattern, testFilterName5, GeoServerSecurityFilterChain.REMEMBER_ME_FILTER);
+        prepareFilterChain(pattern, testFilterName5, GeoServerSecurityFilterChain.REMEMBER_ME_FILTER);
 
         modifyChain(pattern, false, true, null);
 
@@ -1011,17 +859,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        request.addHeader(
-                "Authorization",
-                "Basic " + new String(Base64.encodeBytes(("abc@xyz.com:abc").getBytes())));
+        request.addHeader("Authorization", "Basic " + Base64.encodeBytes(("abc@xyz.com:abc").getBytes()));
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         Authentication auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1038,12 +880,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1060,17 +898,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.setCookies(cookie);
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
-        request.addHeader(
-                "Authorization",
-                "Basic " + new String(Base64.encodeBytes(("abc@xyz.com:abc").getBytes())));
+        request.addHeader("Authorization", "Basic " + Base64.encodeBytes(("abc@xyz.com:abc").getBytes()));
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1086,28 +918,19 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
 
         // We need to enable Master Root login first
-        MasterPasswordProviderConfig masterPasswordConfig =
-                getSecurityManager()
-                        .loadMasterPassswordProviderConfig(
-                                getSecurityManager().getMasterPasswordConfig().getProviderName());
+        MasterPasswordProviderConfig masterPasswordConfig = getSecurityManager()
+                .loadMasterPassswordProviderConfig(
+                        getSecurityManager().getMasterPasswordConfig().getProviderName());
         masterPasswordConfig.setLoginEnabled(true);
         getSecurityManager().saveMasterPasswordProviderConfig(masterPasswordConfig);
 
         request.addHeader(
                 "Authorization",
-                "Basic "
-                        + new String(
-                                Base64.encodeBytes(
-                                        (GeoServerUser.ROOT_USERNAME + ":" + getMasterPassword())
-                                                .getBytes())));
+                "Basic " + Base64.encodeBytes((GeoServerUser.ROOT_USERNAME + ":" + getMasterPassword()).getBytes()));
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1137,8 +960,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
     @Test
     public void testFormLogin() throws Exception {
 
-        UsernamePasswordAuthenticationFilterConfig config =
-                new UsernamePasswordAuthenticationFilterConfig();
+        UsernamePasswordAuthenticationFilterConfig config = new UsernamePasswordAuthenticationFilterConfig();
         config.setClassName(GeoServerUserNamePasswordAuthenticationFilter.class.getName());
         config.setUsernameParameterName("username");
         config.setPasswordParameterName("password");
@@ -1154,8 +976,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
 
         modifyChain(pattern, false, true, null);
 
-        prepareFilterChain(
-                ConstantFilterChain.class, "/j_spring_security_check_foo/", testFilterName6);
+        prepareFilterChain(ConstantFilterChain.class, "/j_spring_security_check_foo/", testFilterName6);
         modifyChain("/j_spring_security_check_foo/", false, true, null);
 
         //        prepareFilterChain(LogoutFilterChain.class,"/j_spring_security_logout_foo",
@@ -1174,12 +995,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
         String tmp = response.getHeader("Location");
         assertTrue(tmp.endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FORM));
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1193,16 +1010,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), testPassword);
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(
-                                GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         Authentication auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1214,10 +1025,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
 
         // Test logout
 
-        GeoServerLogoutFilter logoutFilter =
-                (GeoServerLogoutFilter)
-                        getSecurityManager()
-                                .loadFilter(GeoServerSecurityFilterChain.FORM_LOGOUT_FILTER);
+        GeoServerLogoutFilter logoutFilter = (GeoServerLogoutFilter)
+                getSecurityManager().loadFilter(GeoServerSecurityFilterChain.FORM_LOGOUT_FILTER);
         request = createRequest("/j_spring_security_logout_foo");
         request.setMethod("GET");
         HttpSession session = request.getSession(true);
@@ -1243,16 +1052,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), "wrongpass");
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
 
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1265,16 +1069,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), testPassword);
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
 
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1287,16 +1086,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), getMasterPassword());
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(
-                                GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
@@ -1314,15 +1107,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), "geoserver1");
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1336,15 +1124,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), testPassword);
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FAILURE));
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1365,8 +1148,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
     @Test
     public void testFormLoginWithRememberMe() throws Exception {
 
-        UsernamePasswordAuthenticationFilterConfig config =
-                new UsernamePasswordAuthenticationFilterConfig();
+        UsernamePasswordAuthenticationFilterConfig config = new UsernamePasswordAuthenticationFilterConfig();
         config.setClassName(GeoServerUserNamePasswordAuthenticationFilter.class.getName());
         config.setUsernameParameterName("username");
         config.setPasswordParameterName("password");
@@ -1400,12 +1182,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
         String tmp = response.getHeader("Location");
         assertTrue(tmp.endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_FORM));
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1419,15 +1197,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), testPassword);
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(
-                                GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
         HttpSession session = request.getSession(true);
-        ctx =
-                (SecurityContext)
-                        session.getAttribute(
-                                HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext) session.getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         Authentication auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1441,10 +1214,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         assertNotNull(cookie.getValue());
 
         // check logout
-        GeoServerLogoutFilter logoutFilter =
-                (GeoServerLogoutFilter)
-                        getSecurityManager()
-                                .loadFilter(GeoServerSecurityFilterChain.FORM_LOGOUT_FILTER);
+        GeoServerLogoutFilter logoutFilter = (GeoServerLogoutFilter)
+                getSecurityManager().loadFilter(GeoServerSecurityFilterChain.FORM_LOGOUT_FILTER);
         request = createRequest("/j_spring_security_logout_foo");
         request.setMethod("GET");
         session = request.getSession(true);
@@ -1470,10 +1241,9 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
 
         // We need to enable Master Root login first
-        MasterPasswordProviderConfig masterPasswordConfig =
-                getSecurityManager()
-                        .loadMasterPassswordProviderConfig(
-                                getSecurityManager().getMasterPasswordConfig().getProviderName());
+        MasterPasswordProviderConfig masterPasswordConfig = getSecurityManager()
+                .loadMasterPassswordProviderConfig(
+                        getSecurityManager().getMasterPasswordConfig().getProviderName());
         masterPasswordConfig.setLoginEnabled(true);
         getSecurityManager().saveMasterPasswordProviderConfig(masterPasswordConfig);
 
@@ -1482,16 +1252,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         request.addParameter(config.getPasswordParameterName(), getMasterPassword());
         getProxy().doFilter(request, response, chain);
         assertEquals(response.getStatus(), MockHttpServletResponse.SC_MOVED_TEMPORARILY);
-        assertTrue(
-                response.getHeader("Location")
-                        .endsWith(
-                                GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        assertTrue(response.getHeader("Location")
+                .endsWith(GeoServerUserNamePasswordAuthenticationFilter.URL_LOGIN_SUCCCESS));
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1521,8 +1285,7 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
     @Test
     public void testX509Auth() throws Exception {
 
-        X509CertificateAuthenticationFilterConfig config =
-                new X509CertificateAuthenticationFilterConfig();
+        X509CertificateAuthenticationFilterConfig config = new X509CertificateAuthenticationFilterConfig();
         config.setClassName(GeoServerX509CertificateAuthenticationFilter.class.getName());
         config.setName(testFilterName8);
         config.setRoleServiceName("rs1");
@@ -1545,12 +1308,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
 
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1571,12 +1330,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
             setCertifacteForUser(testUserName, request);
             getProxy().doFilter(request, response, chain);
             assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-            ctx =
-                    (SecurityContext)
-                            request.getSession(true)
-                                    .getAttribute(
-                                            HttpSessionSecurityContextRepository
-                                                    .SPRING_SECURITY_CONTEXT_KEY);
+            ctx = (SecurityContext) request.getSession(true)
+                    .getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
             assertNotNull(ctx);
             Authentication auth = ctx.getAuthentication();
             assertNotNull(auth);
@@ -1601,12 +1356,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
             setCertifacteForUser("unknown", request);
             getProxy().doFilter(request, response, chain);
             assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-            ctx =
-                    (SecurityContext)
-                            request.getSession(true)
-                                    .getAttribute(
-                                            HttpSessionSecurityContextRepository
-                                                    .SPRING_SECURITY_CONTEXT_KEY);
+            ctx = (SecurityContext) request.getSession(true)
+                    .getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
             assertNotNull(ctx);
             Authentication auth = ctx.getAuthentication();
             assertNotNull(auth);
@@ -1626,12 +1377,8 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         setCertifacteForUser(testUserName, request);
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1681,14 +1428,10 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         assertEquals(HttpServletResponse.SC_UNAUTHORIZED, response.getStatus());
         String tmp = response.getHeader("WWW-Authenticate");
         assertNotNull(tmp);
-        assert (tmp.indexOf(GeoServerSecurityManager.REALM) != -1);
-        assert (tmp.indexOf("Digest") != -1);
-        SecurityContext ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        assert (tmp.contains(GeoServerSecurityManager.REALM));
+        assert (tmp.contains("Digest"));
+        SecurityContext ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNull(ctx);
         assertNull(SecurityContextHolder.getContext().getAuthentication());
 
@@ -1698,17 +1441,12 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         response = new MockHttpServletResponse();
         chain = new MockFilterChain();
 
-        String headerValue =
-                clientDigestString(tmp, testUserName, testPassword, request.getMethod());
+        String headerValue = clientDigestString(tmp, testUserName, testPassword, request.getMethod());
         request.addHeader("Authorization", headerValue);
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         Authentication auth = ctx.getAuthentication();
         assertNotNull(auth);
@@ -1725,19 +1463,11 @@ public class AuthenticationFilterTest extends AbstractAuthenticationProviderTest
         chain = new MockFilterChain();
 
         request.addHeader(
-                "Authorization",
-                "Basic "
-                        + new String(
-                                Base64.encodeBytes(
-                                        (testUserName + ":" + testPassword).getBytes())));
+                "Authorization", "Basic " + Base64.encodeBytes((testUserName + ":" + testPassword).getBytes()));
         getProxy().doFilter(request, response, chain);
         assertEquals(HttpServletResponse.SC_OK, response.getStatus());
-        ctx =
-                (SecurityContext)
-                        request.getSession(true)
-                                .getAttribute(
-                                        HttpSessionSecurityContextRepository
-                                                .SPRING_SECURITY_CONTEXT_KEY);
+        ctx = (SecurityContext)
+                request.getSession(true).getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
         assertNotNull(ctx);
         auth = ctx.getAuthentication();
         assertNotNull(auth);
